<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1">
  <POU Name="transitionLogic" Id="{c89798f5-47a8-4f8c-b79f-5bc9758787d8}" SpecialFunc="None">
    <Declaration><![CDATA[FUNCTION_BLOCK PUBLIC transitionLogic

VAR_IN_OUT
    mytrafficlight : trafficLight_typ;
END_VAR
VAR

	delayY: BOOL;
	initPhase: TIME;
	delayR: BOOL;
	delayG: BOOL;
	delay1: BOOL;
	delay2: BOOL;
	delay3: BOOL;
	
	RTRIG_iRed : R_TRIG;
	RTRIG_iGreen : R_TRIG;
	
	
	
END_VAR]]></Declaration>
    <Implementation>
      <ST><![CDATA[RTRIG_iRed(CLK := mytrafficlight.inputs.iRed);
RTRIG_iGreen(CLK := mytrafficlight.inputs.iGreen);

CASE mytrafficlight.state.state OF
    trafficLight_state_enum.A1_DISCONNECTED:
	
		IF mytrafficlight.inputs.iSwitchOn THEN 
			mytrafficlight.state.state := trafficLight_state_enum.F2_stBLINKon;
		END_IF; 
        
    trafficLight_state_enum.F2_stBLINKon:
	
		IF mytrafficlight.inputs.iSwitchOff THEN 
		mytrafficlight.timers.TON_BLINK(IN := FALSE); 
		mytrafficlight.state.state := trafficLight_state_enum.A1_DISCONNECTED;
		ELSIF mytrafficlight.timers.TON_BLINK.Q THEN
			mytrafficlight.timers.TON_BLINK(IN := FALSE); 
			mytrafficlight.state.state := trafficLight_state_enum.F2_stBLINKoff;
		ELSIF mytrafficlight.inputs.iGreen THEN 
			mytrafficlight.timers.TON_BLINK(IN := FALSE); 
			mytrafficlight.state.state := trafficLight_state_enum.F1_stYELLOW; 
		END_IF;

        
    trafficLight_state_enum.F2_stBLINKoff:
	
		IF mytrafficlight.inputs.iSwitchOff THEN 
		mytrafficlight.timers.TON_BLINK(IN := FALSE);
		mytrafficlight.state.state := trafficLight_state_enum.A1_DISCONNECTED;
		ELSIF mytrafficlight.timers.TON_BLINK.Q THEN
			mytrafficlight.timers.TON_BLINK(IN := FALSE); 
			mytrafficlight.state.state := trafficLight_state_enum.F2_stBLINKon;
		ELSIF mytrafficlight.inputs.iGreen THEN 
			mytrafficlight.timers.TON_BLINK(IN := FALSE);
			mytrafficlight.state.state := trafficLight_state_enum.F1_stYELLOW; 
		END_IF;
		
		
    trafficLight_state_enum.F1_stYELLOW:
			
		IF mytrafficlight.inputs.iRed=FALSE THEN 
            delayY := TRUE;
        END_IF;
        IF mytrafficlight.inputs.iSwitchOff THEN 
			mytrafficlight.timers.TON_YELLOW(IN := FALSE);
            mytrafficlight.state.state := trafficLight_state_enum.A1_DISCONNECTED;
        ELSIF mytrafficlight.timers.TON_YELLOW.Q THEN
            mytrafficlight.timers.TON_YELLOW(IN := FALSE); 
            mytrafficlight.state.state := trafficLight_state_enum.F1_stRED; 
		ELSIF delayY AND mytrafficlight.inputs.iRed=TRUE THEN 
			mytrafficlight.timers.TON_YELLOW(IN := FALSE);
			delayY:=FALSE;
			initPhase := TIME();
            mytrafficlight.state.state := trafficLight_state_enum.F6_stYELLOW;
        END_IF;

	

    trafficLight_state_enum.F1_stRED:
	
		IF mytrafficlight.inputs.iRed=FALSE THEN 
            delayR := TRUE;
        END_IF;
        IF mytrafficlight.inputs.iSwitchOff THEN 
			mytrafficlight.timers.TON_RED(IN := FALSE);
            mytrafficlight.state.state := trafficLight_state_enum.A1_DISCONNECTED;
        ELSIF mytrafficlight.timers.TON_RED.Q THEN
            mytrafficlight.timers.TON_RED(IN := FALSE); 
            mytrafficlight.state.state := trafficLight_state_enum.F1_stGREEN;
		ELSIF delayR AND mytrafficlight.inputs.iRed=TRUE THEN 
			mytrafficlight.timers.TON_RED(IN := FALSE);
			delayR:=FALSE;
			initPhase := TIME();
            mytrafficlight.state.state := trafficLight_state_enum.F6_stYELLOW;
        END_IF;

    trafficLight_state_enum.F1_stGREEN:
	
		IF mytrafficlight.inputs.iRed=FALSE THEN 
            delayG := TRUE;
        END_IF;
        IF mytrafficlight.inputs.iSwitchOff THEN 
			mytrafficlight.timers.TON_GREEN(IN := FALSE);
            mytrafficlight.state.state := trafficLight_state_enum.A1_DISCONNECTED;
        ELSIF mytrafficlight.timers.TON_GREEN.Q THEN
            mytrafficlight.timers.TON_GREEN(IN := FALSE); 
            mytrafficlight.state.state := trafficLight_state_enum.F1_stYELLOW; 
		ELSIF delayG AND mytrafficlight.inputs.iRed=TRUE THEN 
			mytrafficlight.timers.TON_GREEN(IN := FALSE);
			delayG:=FALSE;
			initPhase := TIME();
            mytrafficlight.state.state := trafficLight_state_enum.F6_stYELLOW;
        END_IF;

    trafficLight_state_enum.F6_stYELLOW:
	
		IF mytrafficlight.inputs.iswitchoff THEN 
             mytrafficlight.state.state := trafficLight_state_enum.A1_DISCONNECTED;
        END_IF;		
		
		IF mytrafficlight.inputs.iRed=FALSE THEN 
            delay1 := TRUE;
        END_IF;
		
		IF delay1 AND mytrafficlight.inputs.iRed=TRUE  THEN 
			delay1:=FALSE;
			mytrafficlight.timers.maxtime_YELLOW := TIME() - initPhase;
			initPhase := TIME();
            mytrafficlight.state.state := trafficLight_state_enum.F6_stRED;
			
        END_IF;

    trafficLight_state_enum.F6_stRED:
	
				IF mytrafficlight.inputs.iRed=FALSE THEN 
            delay2 := TRUE;
        END_IF;
		
		IF mytrafficlight.inputs.iswitchoff THEN 
             mytrafficlight.state.state := trafficLight_state_enum.A1_DISCONNECTED;
        END_IF;		
		
		
		IF delay2 AND mytrafficlight.inputs.iRed=TRUE THEN 
			delay2:=FALSE;
			mytrafficlight.timers.maxtime_RED := TIME() - initPhase;
			initPhase := TIME();
            mytrafficlight.state.state := trafficLight_state_enum.F6_stGREEN;
        END_IF;

    trafficLight_state_enum.F6_stGREEN:
	
		IF mytrafficlight.inputs.iswitchoff THEN 
             mytrafficlight.state.state := trafficLight_state_enum.A1_DISCONNECTED;
        END_IF;		
		
		IF mytrafficlight.inputs.iRed=FALSE THEN 
            delay3 := TRUE;
        END_IF;
		IF DELAY3 AND mytrafficlight.inputs.iRed=TRUE THEN 
			delay3:=FALSE;
			mytrafficlight.timers.maxtime_GREEN := TIME() - initPhase;
			initPhase := TIME();
            mytrafficlight.state.state := trafficLight_state_enum.F1_stYELLOW;
        END_IF; 
END_CASE]]></ST>
    </Implementation>
  </POU>
</TcPlcObject>